<resources>
    <string name="app_name">Yak</string>
    <string name="question_image">Related Image</string>
    <string name="question">"Question %1$d/%2$d: "</string>
    <string name="option_one">Option 1</string>
    <string name="option_two">Option 2</string>
    <string name="option_three">Option 3</string>
    <string name="option_four">Option 4</string>
    <string name="quiz_start">Begin Quiz</string>>
    <string name="categoryTitle">CHOOSE QUIZ</string>
    <string name="startQuiz">START QUIZ</string>
    <string name="numberOfQuestionsSelectionString">Number of Questions:</string>
    <string name="categorySelectionString">Category:</string>
    <string name="difficultySelectionString">Difficulty:</string>
    <string name="answerTypeSelectionString">Answer Type:</string>
    <string name="defaultNumberOfQuestions">10</string>
    <string name="numberOfQuestionsHint">e.g. 10</string>
    <string name="scoreTextString">Score</string>
    <string name="scoreValueString">0</string>
    <string name="title">Yak Quiz</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip">Continue as guest</string>
    <string name="choose_quiz">Choose Quiz</string>
    <string name="quit">Quit</string>
    <string name="menu">Quiz Menu</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="startScreenContentDescription">An image of many animals together</string>
    <string name="questionTimerInitialString">15</string>
    <string name="resultsHeader1">You Scored</string>
    <string name="share">Share</string>
    <string name="replay">Play again</string>
    <string name="menu_button">Main menu</string>
    <string name="resultsHeader2">Correct Answers!</string>
    <string name="categoryString">%1$s</string>
    <string name="profile_username">Username:</string>
    <string name="profile_username_value">example</string>
    <string name="profile_email">Email address:</string>
    <string name="profile_email_value">example@gmail.com</string>
    <string name="profile_best_score">Best score:</string>
    <string name="profile_best_score_value">You have no scores yet!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="incorrect_login">Username or password incorrect</string>
    <string name="category_title">Category</string>
    <string name="difficulty_title">Difficulty</string>
    <string name="score_title">Score</string>
    <string name="user_title">User</string>
    <string name="goBack">Back</string>
</resources>
